Further namespacing, fixing loop score bug, starting Buyable, settings GUI

--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body {
 	font-family: Helvetica, Arial;
 	font-size: 11px;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .pane {
@@ -48,6 +54,38 @@ h2 {
 
 #settings {
 	background: #eee;
+	text-align: left;
+}
+
+.setting {
+	overflow: hidden;
+	margin: 20px;
+	background: #f4f4f4;
+	border-radius: 10px;
+	line-height: 30px;
+}
+
+.setting label.set {
+	width: 116px;
+	display: block;
+	text-align: right;
+	margin-right: 10px;
+	float: left;
+}
+
+.setting input[type=range] {
+	width: 50px;
+	float: left;
+	margin: 6px 10px 0 0;
+}
+
+#dotsizedot {
+	float: left;
+	background: red;
+	border-radius: 50%;
+	width: 20px;
+	height: 20px;
+	position: relative;
 }
 
 #play {
